--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,32 @@
   <ion-split-pane>
     <ion-menu>
       <ion-header>
-        <ion-toolbar color="dark">
-          <ion-title>Menu</ion-title>
+        <ion-toolbar class="Menuzao" color="dark">
+
+          <ion-row>
+            <ion-col size="3">
+              <img src="{{picture}}" class="perfilMenu" />
+            </ion-col>
+            <ion-col size="9">
+              <ion-card-title class="Menuzin"> {{Nutricionista?.nome}} {{Nutricionista?.sobrenome}}</ion-card-title>
+            </ion-col>
+          </ion-row>
+          <ion-card-title class="Menuzin2">
+            <ion-icon ios="ios-at" md="md-at"></ion-icon> {{usuarioEmail}}
+          </ion-card-title>
+          <ion-card-title class="Menuzin4">
+            <ion-icon ios="ios-tablet-portrait" md="md-tablet-portrait"></ion-icon> {{Nutricionista?.cel}}
+          </ion-card-title>
+          <ion-card-title class="Menuzin5">
+            <ion-icon ios="ios-map" md="md-map"></ion-icon> {{Nutricionista?.cidade}}
+          </ion-card-title>
+
         </ion-toolbar>
       </ion-header>
+
       <ion-content class="menu-app menu-lateral">
-
-
         <ion-list>
+          <ion-title class="Menuzin3">Menu</ion-title>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
             <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
               <ion-icon slot="start" [name]="p.icon"></ion-icon>
