--- a/src/app/lista-de-usuarios/lista-de-usuarios.page.html
+++ b/src/app/lista-de-usuarios/lista-de-usuarios.page.html
@@ -33,8 +33,7 @@
       <img src="{{usuario?.imagem}}" class="circle">
     </ion-thumbnail>
     <ion-label (click)="Chat(usuario)">
-      <p>{{usuario.id}}</p>
-      <p>{{usuario.nome}}</p>
+      <ion-title>{{usuario.nome}}</ion-title>
     </ion-label>
   </ion-item>
 
