--- a/src/app/lista-de-usuarios/lista-de-usuarios.page.scss
+++ b/src/app/lista-de-usuarios/lista-de-usuarios.page.scss
@@ -36,3 +36,25 @@ p{
   position: relative;
   margin: 0 auto;
 }
+
+input[type='file'] {
+  display: none
+}
+
+/* Aparência que terá o seletor de arquivo */
+.perfilx {
+
+  --background: url(../../assets/imagens/1.gif) no-repeat;
+
+}
+
+.perfil1{
+  height: 43px;
+  width: 43px;
+  border-radius: 50%;
+  margin-top: 10px;
+}
+
+.row{
+  text-align: center;
+}
