--- a/src/app/chat-usuario/chat-usuario.page.html
+++ b/src/app/chat-usuario/chat-usuario.page.html
@@ -1,7 +1,16 @@
 <ion-header>
   <ion-toolbar color="success">
     <ion-icon (click)="Home()" slot="start" name="arrow-back" class="iconeconf"></ion-icon>
-    <ion-title>{{Usuario?.nome}}</ion-title>
+    <ion-title>
+      <ion-row>
+        <ion-col size="2">
+          <img src="{{imagem}}" class="perfil1" />
+        </ion-col>
+        <ion-col size="10">
+          <ion-title class="perfil2">{{Usuario?.nome}}</ion-title>
+        </ion-col>
+      </ion-row>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
