--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -3,11 +3,15 @@
     <ion-buttons slot="end">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-icon slot="start" name="contact" class="iconeconf" (click)="Perfil()"></ion-icon>
-    <div class="div2">
-      <ion-title>
-        <img src="../../assets/imagens/logo2.png" class="logo">
-      </ion-title>
+    <div>
+      <ion-row class="row">
+        <ion-col size="2">
+          <img src="{{picture}}" class="perfil1" (click)="Perfil()" />
+        </ion-col>
+        <ion-col size="9">
+          <img src="../../assets/imagens/logo2.png" class="logo">
+        </ion-col>
+      </ion-row>
     </div>
   </ion-toolbar>
 </ion-header>
