--- a/src/app/chat-usuario/chat-usuario.page.html
+++ b/src/app/chat-usuario/chat-usuario.page.html
@@ -19,28 +19,24 @@
 
     <div class="message-wrap">
 
-      <div *ngFor="let msg of conversa">
-
-        <div class="sender">
+        <div *ngFor="let msg of conversa">
 
           <ion-grid>
-            <ion-row>
-              <ion-col col-2 text-left>
-
-              </ion-col>
-              <ion-col col-10>
-                <p>{{msg.mensagem}}</p>
-              </ion-col>
-            </ion-row>
+  
+          <div class="sender1" *ngIf="msg.idSender == idUsuario">
+            <p class="sender12">{{msg.mensagem}}</p>
+          </div>
+  
+          <div class="sender2" *ngIf="msg.idSender != idUsuario">
+            <p>{{msg.mensagem}}</p>
+          </div>
+  
           </ion-grid>
         </div>
 
 
       </div>
-
-
-    </div>
-  </div>
+      </div>
 </ion-content>
 
 <ion-footer no-border>
